# megacommerce-proto

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.envoy.yaml  buf.gen.yaml  buf.yaml  build.rs  conanfile.py  go.mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.py
.github/workflows/: publish.yml
common/v1/: audit.proto  common.proto  config.proto  error.proto  trans.proto  types.proto
config/v1/: config.proto
inventory/v1/: database.proto  inventory.proto  inventory_get.proto  inventory_list.proto  inventory_release.proto  inventory_reserve.proto  inventory_update.proto  reservation_get.proto
orders/v1/: order.proto  order_cancel.proto  order_create.proto  order_events.proto  order_get.proto  order_idempotency_keys.proto  order_line_items.proto  order_refund.proto  orders.proto  orders_list.proto  payment_method.proto
products/v1/: best_selling_products.proto  big_discount_products.proto  category_navbar.proto  hero_products.proto  newly_added_products.proto  product.proto  product_categories.proto  product_create.proto  product_data.proto  product_details.proto  product_events.proto  product_list.proto  product_snapshot.proto  products.proto  products_category.proto  products_list.proto  products_to_like.proto
scripts/: add_init_files.py  build-cjs.js  gen-barrels.ts  grpcurl_wrapper.py
test/: README.md
wrappers/: lib.rs
wrappers/proto-crate/: Cargo.toml  README.md  build.rs
wrappers/proto-crate/src/: common.v1.rs  google.protobuf.rs  inventory.v1.rs  lib.rs  orders.v1.rs  products.v1.rs  search.v1.rs  shared.v1.rs  uploader.v1.rs  user.v1.rs  users.v1.rs
wrappers/proto-crate/src/envoy/: envoy.config.core.v3.rs  envoy.r#type.v3.rs  envoy.service.auth.v3.rs  google.protobuf.rs  udpa.annotations.rs  validate.rs  xds.core.v3.rs
(+187 files in other folders)
