[package]
name = "megacommerce-protos"
version = "0.1.11"
edition = "2021"
description = "Generated gRPC protobuf definitions for MegaCommerce"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahmad-khatib0-org/megacommerce-proto"
readme = "README.md"
keywords = ["protobuf", "tonic", "grpc", "megacommerce"]
categories = ["api-bindings", "network-programming"]
publish = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[lib]
name = "megacommerce_proto"
path = "src/lib.rs"
